tests/reference/asr-array_constructor_with_integer_real_array_types-c665202.stderr
semantic error: Element in integer array constructor is real
 --> tests/errors/array_constructor_with_integer_real_array_types.f90:2:18
  |
2 |     print *, [1, [1., 2.]]
  |                  ^^^^^^^^ 
